experimenting with the titlebar

--- a/Minimalistic Code Editor/Minimalistic Code Editor/App.xaml
+++ b/Minimalistic Code Editor/Minimalistic Code Editor/App.xaml
@@ -13,6 +13,8 @@
                 <!-- Other merged dictionaries here -->
             </ResourceDictionary.MergedDictionaries>
             <!-- Other app resources here -->
+            <!--<SolidColorBrush x:Key="WindowCaptionBackground">#212121</SolidColorBrush>
+            <SolidColorBrush x:Key="WindowCaptionForeground">White</SolidColorBrush>-->
         </ResourceDictionary>
     </Application.Resources>
 </Application>
