--- a/Minimalistic Code Editor/Minimalistic Code Editor/MainWindow.xaml
+++ b/Minimalistic Code Editor/Minimalistic Code Editor/MainWindow.xaml
@@ -16,7 +16,7 @@
 
         </Grid>
 
-        <Grid Height="48" VerticalAlignment="Top" x:Name="AppTitleBar" Background="{ThemeResource SystemControlBackgroundListLowBrush}"
+        <Grid Height="40" VerticalAlignment="Top" x:Name="AppTitleBar" Background="{ThemeResource SystemControlBackgroundListLowBrush}"
               SizeChanged="AppTitleBar_SizeChanged">
 
             <Grid.ColumnDefinitions>
@@ -28,12 +28,27 @@
             </Grid.ColumnDefinitions>
         </Grid>
 
-        <MenuBar x:Name="MainMenuBar" Margin="0,0,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
-            <MenuBarItem Tag="File" Title="File" >
-                <MenuFlyoutItem Text="New"/>
-                <MenuFlyoutItem Text="Open..."/>
-                <MenuFlyoutItem Text="Save"/>
-                <MenuFlyoutItem Text="Exit"/>
+        <MenuBar x:Name="MainMenuBar" Margin="0,0,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Foreground="Gray">
+            <MenuBarItem Tag="File" Title="File">
+                <MenuFlyoutItem Text="New" Click="MenuFlyoutItem_Click"/>
+                <MenuFlyoutSeparator/>
+                <MenuFlyoutItem Text="Open..." Click="MenuFlyoutItem_Click"/>
+                <MenuFlyoutSeparator/>
+                <MenuFlyoutItem Text="Save" Click="MenuFlyoutItem_Click"/>
+                <MenuFlyoutItem Text="Save As..." Click="MenuFlyoutItem_Click"/>
+                <MenuFlyoutSeparator/>
+                <MenuFlyoutItem Text="Exit" Click="MenuFlyoutItem_Click"/>
+            </MenuBarItem>
+            <MenuBarItem Tag="Edit" Title="Edit" >
+                <MenuFlyoutItem Text="Undo"/>
+                <MenuFlyoutItem Text="Redo"/>
+                <MenuFlyoutSeparator/>
+                <MenuFlyoutItem Text="Cut"/>
+                <MenuFlyoutItem Text="Copy"/>
+                <MenuFlyoutItem Text="Paste"/>
+                <MenuFlyoutSeparator/>
+                <MenuFlyoutItem Text="Find"/>
+                <MenuFlyoutItem Text="Replace"/>
             </MenuBarItem>
         </MenuBar>
 
