--- a/Minimalistic Code Editor/Minimalistic Code Editor/MainWindow.xaml
+++ b/Minimalistic Code Editor/Minimalistic Code Editor/MainWindow.xaml
@@ -28,6 +28,15 @@
             </Grid.ColumnDefinitions>
         </Grid>
 
+        <Grid HorizontalAlignment="Left" VerticalAlignment="Stretch" Background="Transparent" Width="50" Height="Auto" Margin="0,40,0,0">
+            <Border HorizontalAlignment="Right" VerticalAlignment="Stretch" Width="1" Height="Auto" Background="#121212"/>
+            <TextBlock x:Name="linesTextBlock" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="20"/>
+        </Grid>
+
+        <Grid Width="Auto" Height="Auto" Margin="50,40,0,0" Background="Transparent">
+            <TextBox Text="test" IsSpellCheckEnabled="False" TextWrapping="Wrap" PlaceholderForeground="Transparent" />
+        </Grid>
+
         <MenuBar x:Name="MainMenuBar" Margin="0,0,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Foreground="Gray">
             <MenuBarItem Tag="File" Title="File">
                 <MenuFlyoutItem Text="New" Click="MenuFlyoutItem_Click"/>
