--- a/Minimalistic Code Editor/Minimalistic Code Editor/MainWindow.xaml
+++ b/Minimalistic Code Editor/Minimalistic Code Editor/MainWindow.xaml
@@ -8,6 +8,7 @@
     xmlns:local="using:Minimalistic_Code_Editor"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:codeEditor="using:Minimalistic_Code_Editor.CodeEditor"
     mc:Ignorable="d">
 
     <Grid>
@@ -28,13 +29,8 @@
             </Grid.ColumnDefinitions>
         </Grid>
 
-        <Grid HorizontalAlignment="Left" VerticalAlignment="Stretch" Background="Transparent" Width="50" Height="Auto" Margin="0,40,0,0">
-            <Border HorizontalAlignment="Right" VerticalAlignment="Stretch" Width="1" Height="Auto" Background="#121212"/>
-            <TextBlock x:Name="linesTextBlock" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="20"/>
-        </Grid>
-
-        <Grid Width="Auto" Height="Auto" Margin="50,40,0,0" Background="Transparent">
-            <TextBox Text="test" IsSpellCheckEnabled="False" TextWrapping="Wrap" PlaceholderForeground="Transparent" />
+        <Grid>
+            <codeEditor:CodeEditor/>
         </Grid>
 
         <MenuBar x:Name="MainMenuBar" Margin="0,0,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Foreground="Gray">
