a working animation, just not the right way

--- a/Minimalistic Code Editor/Minimalistic Code Editor/MainWindow.xaml
+++ b/Minimalistic Code Editor/Minimalistic Code Editor/MainWindow.xaml
@@ -17,17 +17,24 @@
         </Grid>
 
         <Button Width="200" Height="50" VerticalAlignment="Center" HorizontalAlignment="Center" Click="Button_Click"/>
+        <Button Width="200" Height="50" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,200,0,0" Click="Button_Click_1"/>
 
         <StackPanel x:Name="FindReplaceGrid" Height="50" Width="1000" Margin="0,100,0,0" Background="Yellow" VerticalAlignment="Top" HorizontalAlignment="Center">
             <StackPanel.Resources>
                 <Storyboard x:Name="StoryboardFindReplaceGrid">
-                    <DoubleAnimation Storyboard.TargetName="TranslationFindReplace" Storyboard.TargetProperty="Y" From="0" To="200">
+                    <DoubleAnimation Storyboard.TargetName="TranslationFindReplace" Storyboard.TargetProperty="Y" From="0" To="100">
                         <DoubleAnimation.EasingFunction>
                             <ExponentialEase Exponent="7" EasingMode="EaseOut" />
                         </DoubleAnimation.EasingFunction>
                     </DoubleAnimation>
                 </Storyboard>
             </StackPanel.Resources>
+            <StackPanel.RenderTransform>
+                <TranslateTransform x:Name="TranslationFindReplace"/>
+            </StackPanel.RenderTransform>
+            <TextBlock Text="Find and replace"/>
+            <TextBox PlaceholderText="Enter text to find"/>
+            <TextBox PlaceholderText="Enter text to replace with"/>
         </StackPanel>
 
         <Grid Height="40" VerticalAlignment="Top" x:Name="AppTitleBar" Background="{ThemeResource SystemControlBackgroundListLowBrush}"
